<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/account_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_relative_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_ui_main_title"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_fields_ll"
        android:layout_below="@+id/title_tv"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        vehicle_relative_layout

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vehicle_relative_layout">

            <TextView
                android:id="@+id/vehicle_tv"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/settings_ui_update_vehicle"
                android:paddingLeft="35dp"
                android:gravity="center_vertical"
                android:background="@drawable/settings_arrow"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_relative_layout"
            android:layout_marginTop="-2dp">

            <TextView
                android:id="@+id/profile_tv"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/settings_ui_update_profile"
                android:paddingLeft="35dp"
                android:gravity="center_vertical"
                android:background="@drawable/settings_arrow"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gps_relative_layout"
            android:layout_marginTop="-2dp">

            <TextView
                android:id="@+id/gps_tv"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/settings_ui_gps"
                android:paddingLeft="35dp"
                android:gravity="center_vertical"
                android:background="@drawable/settings_arrow"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22dp"/>

        </RelativeLayout>
S
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_relative_layout"
            android:layout_marginTop="-2dp">

            <TextView
                android:id="@+id/help_tv"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/settings_ui_help"
                android:paddingLeft="35dp"
                android:gravity="center_vertical"
                android:background="@drawable/settings_arrow"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22dp"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logout_btn_relative_layout"
        android:layout_below="@+id/settings_fields_ll"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:text="@string/settings_ui_button_title"
            android:background="@drawable/acc_button_next"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24dp"/>

    </RelativeLayout>

</LinearLayout>