<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:id="@+id/main_linear_layout"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Version x.x"
        android:id="@+id/tvVersion"
        android:textColor="#ffffff"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/splash_screen_rideeze"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal">

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:id="@+id/email_et_relative_layout"
            android:background="@drawable/form">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/driver_dialog_email"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:focusable="true"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:id="@+id/password_et_relative_layout"
            android:layout_below="@+id/email_et_relative_layout"
            android:layout_marginTop="10dp"
            android:background="@drawable/form">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/driver_dialog_password"
                android:inputType="textPassword"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_tv_relative_layout"
            android:layout_below="@+id/password_et_relative_layout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_ui_forgot_pass"
                android:textColor="#FFFFFF"
                android:id="@+id/forgot_textview"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="18dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn_relative_layout"
            android:layout_below="@+id/forgot_tv_relative_layout"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/driver_main_account_next_button_id"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/log_in"
                android:text="@string/driver_ui_login"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="24dp"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_tv_relative_layout"
            android:layout_below="@+id/login_btn_relative_layout"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_ui_need_an_account_first"
                android:textColor="#FFFFFF"
                android:id="@+id/sign_up_textview_id"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_ui_need_an_account_second"
                android:textColor="#FFFFFF"
                android:id="@+id/sign_up_textview_id1"
                android:layout_below="@+id/sign_up_textview_id"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:textSize="18dp"/>

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>